feat: add history case revert api and ui
